...
      "isCommentAutoGenerated" : true
    },
    "Add" : {
      "comment" : "A button that adds a new participant.",
      "isCommentAutoGenerated" : true
    },
    "Add Meeting" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إضافة اجتماع"
          }
...
            "state" : "translated",
            "value" : "添加会议"
          }
        }
      }
    },
    "Add Participant" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إضافة مشارك"
          }
...
            "state" : "translated",
            "value" : "日期"
          }
        }
      }
    },
    "Delete" : {
      "comment" : "A menu item that deletes a meeting.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {
      "localizations" : {
        "ar" : {
...
            "state" : "translated",
            "value" : "请输入数字值"
          }
        }
      }
    },
    "First Name" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الاسم الأول"
          }
...
            "state" : "translated",
            "value" : "新建会议"
          }
        }
      }
    },
    "New Participant" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مشارك جديد"
          }
...
            "state" : "translated",
            "value" : "排序会议"
          }
        }
      }
    },
    "Start" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "بدء"
          }
...
            "state" : "translated",
            "value" : "统计"
          }
        }
      }
    },
    "Stop" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إيقاف"
          }
...
